--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,9 @@
-.App {
-  text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* :root {
+  --primary-color: #17252a;
+  --secondary-color: #2b7a78;
+  --accent-color: #3aafa9;
+  --primary-text-color: #7a7a7a;
+  --secondary-text-color: #637b81;
+  --accent-text-color: #333333;
+  --site-background-color: #f5f5f5;
+} */
