--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -51,7 +51,7 @@
   color: #fff;
 }
 
-.pwa__navbar-button button,
+/* .pwa__navbar-button button,
 .pwa__navbar-menu-wrapper button {
   padding: 0.5rem 2rem;
   color: #fff;
@@ -63,7 +63,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-}
+} */
 
 .pwa__navbar-menu {
   margin-left: 1rem;
