--- a/src/sections/hero/hero.css
+++ b/src/sections/hero/hero.css
@@ -1,6 +1,7 @@
 .hero {
   display: flex;
-  height: 88vh;
+  height: 90vh;
+  padding: 0 2.5rem;
 }
 
 .hero-left {
@@ -22,16 +23,17 @@
   height: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .hero-intro {
-  font-size: 30px;
+  font-size: 18px;
   font-weight: 300;
 }
 
 .hero-name {
-  font-size: 60px;
+  font-size: 50px;
+  font-weight: 600;
 }
 
 .hero-job-title {
@@ -68,8 +70,18 @@
   align-items: center;
 }
 
+.hero-description {
+  font-size: 18px;
+}
+
+.hero-btn-wrapper {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0;
+}
+
 .hero-img {
   width: 100%;
   height: 100%;
-  object-fit: scale-down;
+  object-fit: contain;
 }
