--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@
   --secondary-text-color: #637b81;
   --accent-text-color: #333333;
   --site-background-color: #f5f5f5;
+  --white-color: #ffffff;
 }
