--- a/src/sections/hero/hero.css
+++ b/src/sections/hero/hero.css
@@ -1,7 +1,32 @@
 .hero {
+  position: relative;
   display: flex;
-  height: 90vh;
+  height: 100vh;
   padding: 0 2.5rem;
+  background: rgb(58,175,169);
+  background: linear-gradient(90deg, rgba(58,175,169,1) 0%, rgba(58,175,169,1) 5%, rgba(255,255,255,1) 100%);
+}
+
+.custom-shape-divider-bottom-1650973913 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1650973913 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 41px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-bottom-1650973913 .shape-fill {
+  fill: #FFFFFF;
 }
 
 .hero-left {
@@ -24,6 +49,22 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.hero-social-icons-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.hero-social-icon {
+  cursor: pointer;
+}
+
+.hero-social-icon:hover {
+  transition: all .3s ease-in;
+  transform: scale(1.2);
+  z-index: 1;
 }
 
 .hero-intro {
@@ -65,7 +106,7 @@
   height: 50px;
   font-size: 30px;
   font-weight: bold;
-  color: darkcyan;
+  color: crimson;
   display: flex;
   align-items: center;
 }
@@ -81,7 +122,14 @@
 }
 
 .hero-img {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
   object-fit: contain;
+  
+}
+
+.hero-img:hover {
+  transition: all .3s ease-in;
+  transform: scale(1.05);
+  z-index: 1;
 }
