--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -1,5 +1,84 @@
 .contact {
   height: 100vh;
-  background-color: cornflowerblue;
   text-align: center;
+  position: relative;
 }
+
+.contact-bg {
+  width: 20px;
+  height: 100%;
+  background-color: var(--primary-color);
+  position: absolute
+}
+
+.contact-wrapper {
+  display: flex;
+  padding: 50px;
+  padding: 0rem 6rem;
+}
+
+.contact-left {
+  flex: 1;
+}
+
+.contact-right {
+  flex: 1;
+  flex-direction: column;
+  text-align: left;
+}
+
+
+.contact-title {
+  font-size: 60px;
+  width: 80%;
+}
+
+.contact-info-item {
+  display: flex;
+  align-items: center;
+  margin: 50px 0px;
+  font-weight: 300;
+  width: 70%;
+}
+
+.contact-icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+  font-weight: 400;
+}
+
+.contact-decription {
+  font-weight: 200;
+}
+
+form {
+  margin-top: 20px;
+}
+
+.input {
+  width: 60%;
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid #333333;
+  margin: 10px auto;
+  font-size: 14px;
+  padding-left: 10px;
+}
+
+.textarea {
+  width: 90%;
+  margin: 10px 0px;
+  font-size: 14px;
+  padding-left: 10px;
+}
+
+button {
+  border: none;
+  padding: 15px;
+  margin: 1px 0px;
+  background-color: var(--primary-color);
+  color: white;
+  cursor:pointer;
+}
+
