--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -19,6 +19,7 @@
 
 .contact-left {
   flex: 1;
+  padding-left: 5px;
 }
 
 .contact-right {
@@ -31,6 +32,7 @@
 .contact-title {
   font-size: 60px;
   width: 80%;
+  text-align: left;
 }
 
 .contact-info-item {
@@ -64,6 +66,7 @@ form {
   margin: 10px auto;
   font-size: 14px;
   padding-left: 10px;
+  border-radius: 5px;
 }
 
 .textarea {
@@ -71,12 +74,14 @@ form {
   margin: 10px 0px;
   font-size: 14px;
   padding-left: 10px;
+  border-radius: 5px;
 }
 
-button {
+.button {
   border: none;
-  padding: 15px;
+  padding: 10px 40px;
   margin: 1px 0px;
+  border-radius: 5px;
   background-color: var(--primary-color);
   color: white;
   cursor:pointer;
