--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -66,3 +66,51 @@
   transform: scale(1.2);
   z-index: 1;
 }
+
+@media screen and (max-width: 550px) {
+  .about {
+    margin-top: 250px;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-left {
+    position: relative;
+    width: 100%;
+  }
+
+  .bg {
+    position: absolute;
+    top: -140px;
+    left: 90px;
+    background-color: #333333;
+  }
+  
+  .about-card {
+    width: 60%;
+    height: 70vh;
+    border-radius: 10px;
+    position: absolute;
+  }
+  
+  .about-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .about-right {
+    padding: 0px 3rem;
+    padding-top: 12rem;
+  }
+
+  .about-title {
+    font-weight: 600;
+  }
+
+  .about-social-icons-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
+}
