--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -50,11 +50,11 @@
   font-weight: 400;
 }
 
-.contact-decription {
+.contact-description {
   font-weight: 200;
 }
 
-form {
+.form {
   margin-top: 20px;
 }
 
@@ -85,5 +85,42 @@ form {
   background-color: var(--primary-color);
   color: white;
   cursor:pointer;
+}
+
+@media screen and (max-width: 550px) {
+  .contact {
+    height: 100%;
+    padding-bottom: 30px;
+  }
+
+  .contact-wrapper {
+    flex-direction: column;
+    padding: 0px 50px
+  }
+
+  .contact-title {
+    font-size: 30px;
+  }
+
+  .contact-info-item {
+    margin: 20px 0px;
+    width: 100%;
+  }
+
+  .contact-description {
+    display: none;
+  }
+
+  .form {
+    margin-top: 0px;
+  }
+
+  .input {
+    width:100% ;
+  }
+
+  .textarea {
+    width: 100%;
+  }
 }
 
