--- a/src/sections/productCard/productCard.css
+++ b/src/sections/productCard/productCard.css
@@ -31,3 +31,10 @@
 .product-card:hover .product-list-image {
   transform: translateY(-55%);
 }
+
+@media screen and (max-width: 550px) {
+  .product-card {
+    width: 80%;
+    height: 70vh;
+  }
+}
