--- a/src/sections/productList/productlist.css
+++ b/src/sections/productList/productlist.css
@@ -25,3 +25,27 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 550px) {
+  .product-list {
+    margin: 200px 0px;
+    padding: 0px 3rem;
+    text-align: center;
+  }
+
+  .product-list-texts {
+    width: 100%;
+  }
+
+  .product-list-title {
+    font-size: 40px;
+    font-weight: 600;
+  }
+
+  .product-list-list {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+}
