--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   /* background: var(--site-background-color); */
   /* box-shadow: 15px 15px 15px #bebebe, -15px -15px 15px #ffffff; */
-  box-shadow: 2px 2px 2px 2px #bebebe;
+  box-shadow: -2px 2px 2px 2px #333333;
   padding: 2rem 1rem;
   width: 300px;
   height: 270px;
@@ -12,7 +12,7 @@
   transition: all .3s ease-in;
   transform: scale(1.05);
   z-index: 1;
-  box-shadow: 4px 4px 4px 4px #bebebe;
+  box-shadow: -4px 4px 4px 4px #333333;
 }
 
 .card__content-wrapper {
