--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --primary-color: #17252a;
   --secondary-color: #2b7a78;
   --accent-color: #3aafa9;
-  --primary-text-color: #7a7a7a;
+  --primary-text-color: #222222;
   --secondary-text-color: #637b81;
   --accent-text-color: #333333;
   --site-background-color: #f5f5f5;
