--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -1,7 +1,10 @@
 .contact {
   height: 100vh;
   text-align: center;
+  align-items: center;
+  justify-content: center;
   position: relative;
+  margin-top: 50px;
 }
 
 .contact-bg {
