--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   /* background: var(--site-background-color); */
   /* box-shadow: 15px 15px 15px #bebebe, -15px -15px 15px #ffffff; */
-  box-shadow: -2px 2px 2px 2px #333333;
+  box-shadow: -4px 4px 2px 2px #333333;
   padding: 2rem 1rem;
   width: 300px;
   height: 270px;
@@ -12,7 +12,7 @@
   transition: all .3s ease-in;
   transform: scale(1.05);
   z-index: 1;
-  box-shadow: -4px 4px 4px 4px #333333;
+  box-shadow: -8px 8px 2px 2px #333333;
 }
 
 .card__content-wrapper {
@@ -59,4 +59,34 @@
 }
 
 @media screen and (max-width: 550px) {
+}
+
+@media screen and (max-width: 375px) {
+  .card__body {
+    width: 100%;
+    margin: 0px 0px;
+  }
+
+  .card__content-right-title {
+    font-size: 16px;
+  }
+
+  .card__content-right-description {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .card__body {
+    width: 100%;
+    margin: 0px 0px;
+  }
+
+  .card__content-right-title {
+    font-size: 16px;
+  }
+
+  .card__content-right-description {
+    font-size: 12px;
+  }
 }
