--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  /* position: relative; */
   height: 100%;
 }
 
@@ -19,19 +19,20 @@
   padding-right: 5rem;
 }
 
-.bg {
+/* .bg {
   position: absolute;
   top: 110px;
   left: 110px;
   background-color: #333333;
-}
+} */
 
 .about-card {
   width: 60%;
   height: 70vh;
   border-radius: 30px;
-  position: absolute;
+  /* position: absolute; */
   overflow: hidden;
+  box-shadow: -8px 8px 2px 2px #333333;
 }
 
 .about-img {
@@ -77,29 +78,30 @@
 
 @media screen and (max-width: 550px) {
   .about {
-    margin-top: 250px;
-    margin-bottom: 500px;
+    height: 100%;
+    width: 100%;
+    margin: 4rem 0px;
     flex-direction: column;
     text-align: center;
   }
 
   .about-left {
-    position: relative;
+    /* position: relative; */
     width: 100%;
   }
 
-  .bg {
+  /* .bg {
     position: absolute;
     top: -140px;
     left: 90px;
     background-color: #333333;
-  }
+  } */
   
   .about-card {
-    width: 60%;
-    height: 70vh;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
-    position: absolute;
+    margin: 0px 2rem;
   }
   
   .about-img {
@@ -107,9 +109,10 @@
     height: 100%;
     object-fit: cover;
   }
+
   .about-right {
-    padding: 0px 3rem;
-    padding-top: 12rem;
+    padding: 0px 1rem;
+    padding-top: 2rem;
   }
 
   .about-title {
@@ -121,5 +124,25 @@
     flex-direction: row;
     justify-content: center;
     gap: 20px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .about {
+    height: 100%;
+    width: 100%;
+    margin: 4rem 0px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    /* background-color: aqua; */
+  }
+
+  .about-left {
+    width: 100%;
+  }
+
+  .about-card {
+    margin: 0px 2rem;
   }
 }
