--- a/src/sections/hero/hero.css
+++ b/src/sections/hero/hero.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   height: 100vh;
-  padding: 0 2.5rem;
+  padding: 3rem 2.5rem;
   /* background: rgb(58,175,169); */
   background: linear-gradient(90deg, rgba(58,175,169,1) 0%, rgba(58,175,169,1) 5%, rgba(255,255,255,1) 100%);
 }
@@ -146,7 +146,6 @@
   .hero {
     flex-direction: column;
     position: static;
-    height: 200vh;
     background: linear-gradient(180deg, rgba(58,175,169,1) 0%, rgba(58,175,169,1) 5%, rgba(255,255,255,1) 100%);
   }
 
@@ -166,3 +165,25 @@
     margin-bottom: 20px;
   }
 }
+
+@media screen and (max-width: 375px) {
+  .hero-job-title-wrapper {
+    height: 100%;
+  }
+
+  .hero-job-title-item {
+    height: 100%;
+    font-size: 24px;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .hero-job-title-item {
+    height: 100%;
+    font-size: 20px;
+    display: block;
+  }
+}
+
+
