--- a/src/sections/productCard/productCard.css
+++ b/src/sections/productCard/productCard.css
@@ -1,6 +1,6 @@
 .product-card {
   width: 30%;
-  height: 40vh;
+  height: 60vh;
   margin: 20px 10px;
   border: 2px solid rgb(243, 242, 242);
   border-radius: 10px 10px 0px 0px;
@@ -36,5 +36,12 @@
   .product-card {
     width: 80%;
     height: 70vh;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .product-card {
+    width: 80%;
+    height: 50vh;
   }
 }
