--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -10,7 +10,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* position: relative; */
   height: 100%;
 }
 
@@ -19,18 +18,10 @@
   padding-right: 5rem;
 }
 
-/* .bg {
-  position: absolute;
-  top: 110px;
-  left: 110px;
-  background-color: #333333;
-} */
-
 .about-card {
   width: 60%;
   height: 70vh;
   border-radius: 30px;
-  /* position: absolute; */
   overflow: hidden;
   box-shadow: -8px 8px 2px 2px #333333;
 }
@@ -76,6 +67,31 @@
   z-index: 1;
 }
 
+@media screen and (max-width: 770px) {
+  .about {
+    height: 100%;
+    width: 100%;
+    margin: 4rem 0rem;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-left {
+    width: 100%;
+    height: 100%;
+  }
+
+  .about-right {
+    padding: 0px 4rem;
+    padding-top: 2rem;
+    text-align: left;
+  }
+
+  .about-img {
+    height: 100%;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .about {
     height: 100%;
@@ -86,16 +102,8 @@
   }
 
   .about-left {
-    /* position: relative; */
     width: 100%;
   }
-
-  /* .bg {
-    position: absolute;
-    top: -140px;
-    left: 90px;
-    background-color: #333333;
-  } */
   
   .about-card {
     width: 100%;
@@ -135,7 +143,6 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    /* background-color: aqua; */
   }
 
   .about-left {
