--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -95,6 +95,54 @@
   cursor:pointer;
 }
 
+@media screen and (max-width: 770px) {
+  .contact {
+    height: 100%;
+  }
+
+  .contact-wrapper {
+    width: 100%;
+    padding: 0px 3rem;
+  }
+
+  .contact-title {
+    font-size: 40px;
+    width: 100%;
+    text-align: left;
+  }
+
+  .contact-info-item {
+    display: flex;
+    align-items: center;
+    margin: 30px 0px;
+    font-weight: 300;
+    width: 70%;
+  }
+
+  .contact-icon-text {
+    font-size: 14px;
+  }
+
+  .contact-description {
+    font-size: 14px;
+  }
+
+  .form {
+    margin-top: 10px;
+  }
+
+  .input {
+    width: 100%;
+    margin: 5px auto;
+    font-size: 12px;
+  }
+
+  .textarea {
+    width: 100%;
+    font-size: 12px;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .contact {
     height: 100%;
